--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "fastd/container": "^3.0",
     "fastd/config": "^3.0",
     "runner/validator": "^0.2.7",
-    "fastd/http": "^3.0"
+    "fastd/http": "^3.0",
+    "illuminate/support": "^5.5"
   }
 }
